--- a/rootfs-overlay/etc/nginx/nginx.conf
+++ b/rootfs-overlay/etc/nginx/nginx.conf
@@ -7,16 +7,16 @@ http {
     proxy_busy_buffers_size   256k;
 
     map $host $proxy_destination {
-        "ghcr.io" "https://ghcr.nju.edu.cn";
-        "github.com" "https://pushfast.so169.com";
-        "api.github.com" "https://pushapi.so169.com";
-        "github.githubassets.com" "https://pushassets.so169.com";
-        "objects.githubusercontent.com" "https://pushobjects.so169.com";
-        "raw.githubusercontent.com" "https://pushraw.so169.com";
-        "version.home-assistant.io" "https://sumju.net";
-        "services.home-assistant.io" "https://haservices.so169.com";
-        "alerts.home-assistant.io" "https://pushalert.so169.com";
-        "data-v2.hacs.xyz" "https://pushdata-v2.so169.com";
+        "ghcr.io" "https://ghcr.shxyke.eu.org";
+        "github.com" "https://gh-proxy.shxyke.eu.org";
+        "api.github.com" "https://api-gh-proxy.shxyke.eu.org";
+        "github.githubassets.com" "https://assets-gh-proxy.shxyke.eu.org";
+        "objects.githubusercontent.com" "https://objects-gh-proxy.shxyke.eu.org";
+        "raw.githubusercontent.com" "https://raw-gh-proxy.shxyke.eu.org";
+        "version.home-assistant.io" "https://version-hass-proxy.shxyke.eu.org";
+        "services.home-assistant.io" "https://services-hass-proxy.shxyke.eu.org";
+        "alerts.home-assistant.io" "https://alerts-hass-proxy.shxyke.eu.org";
+        "data-v2.hacs.xyz" "https://hacs-data.shxyke.eu.org";
     }
     server {
         listen 172.30.32.1:443 ssl;
