--- a/rootfs-overlay/etc/systemd/timesyncd.conf
+++ b/rootfs-overlay/etc/systemd/timesyncd.conf
@@ -1,6 +1,6 @@
 [Time]
-NTP=185.53.179.170
-NTP=106.55.184.199
-FallbackNTP=120.25.115.20
+NTP=ntp.aliyun.com
+NTP=ntp.tencent.com
+FallbackNTP=time.cloudflare.com
 # Speed-up boot as first attempt is done before network is up
 ConnectionRetrySec=3
